--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.63.1",
     "@prisma/client": "^6.16.2",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-avatar": "^1.1.10",
@@ -25,9 +26,24 @@
     "@react-email/components": "^0.5.3",
     "@react-email/render": "^1.2.3",
     "@supabase/supabase-js": "^2.57.4",
+    "@tiptap/extension-bubble-menu": "^3.5.2",
+    "@tiptap/extension-code-block-lowlight": "^3.5.2",
+    "@tiptap/extension-color": "^3.5.2",
+    "@tiptap/extension-floating-menu": "^3.5.2",
+    "@tiptap/extension-highlight": "^3.5.2",
+    "@tiptap/extension-image": "^3.5.2",
+    "@tiptap/extension-link": "^3.5.2",
+    "@tiptap/extension-placeholder": "^3.5.2",
+    "@tiptap/extension-text-align": "^3.5.2",
+    "@tiptap/extension-text-style": "^3.5.2",
+    "@tiptap/extension-underline": "^3.5.2",
+    "@tiptap/pm": "^3.5.2",
+    "@tiptap/react": "^3.5.2",
+    "@tiptap/starter-kit": "^3.5.2",
     "bootstrap": "^5.3.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lowlight": "^3.3.0",
     "lucide-react": "^0.543.0",
     "next": "15.5.3",
     "prisma": "^6.16.2",
