--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "bootstrap": "^5.3.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.22",
     "lowlight": "^3.3.0",
     "lucide-react": "^0.543.0",
     "next": "15.5.3",
