--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint ."
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.63.1",
@@ -46,11 +46,11 @@
     "framer-motion": "^12.23.22",
     "lowlight": "^3.3.0",
     "lucide-react": "^0.543.0",
-    "next": "15.5.3",
+    "next": "^16.1.6",
     "prisma": "^6.16.2",
-    "react": "19.1.0",
+    "react": "^19.2.4",
     "react-bootstrap": "^2.10.10",
-    "react-dom": "19.1.0",
+    "react-dom": "^19.2.4",
     "react-hook-form": "^7.63.0",
     "react-whatsapp": "^0.3.0",
     "resend": "^6.1.0",
@@ -61,7 +61,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "eslint": "^9",
-    "eslint-config-next": "15.5.3",
+    "eslint-config-next": "^16.1.6",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.8"
   }
